--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
           font-size: 25px;
           font-family: "Sawarabi Gothic";
         }
+        .custom-p2 {
+          color: #2979CE;
+          font-family: "Sawarabi Gothic";
+        }
         .custom-faicon {
           font-size: 30px;
         }
@@ -169,6 +173,31 @@
           <div class="row">
               <div class="col col-lg-8">
 
+      <div class="card border-danger text-black">
+          <div class="card-body">
+              <h3 class="font-weight-bold">お知らせ</h3>
+              <div class="card border-white">
+                  <div class="card-body">
+                    <h5 class="card-title custom-p2">2018/07/25 1:25 JST</h5>
+                    <p class="card-text custom-p2">所有権を移行しました</p>
+                  </div>
+                </div>
+            <div class="card border-white">
+              <div class="card-body">
+                <h5 class="card-title custom-p2">2018/03/10 22:49 JST</h5>
+                <p class="card-text custom-p2">サイトのデザインを見直し見やすく修正しました。プライバシーポリシーを作成しました。</p>
+              </div>
+            </div>
+            <div class="card border-white">
+              <div class="card-body">
+                <h5 class="card-title custom-p2">2018/04/20 11:55 JST</h5>
+                <p class="card-text custom-p2">サーバ名をサイトに反映させました。</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <hr>
+
       <div class="card text-black bg-success">
         <div class="card-header text-white">Japan Minecraft Servers</div>
           <div class="card-body" align="center">
@@ -178,33 +207,6 @@
               </div>
             </div>
             <br>
-
-      <div class="card text-black bg-warning">
-        <div class="card-header text-white">お知らせ</div>
-        <div class="card-body">
-            <div class="card">
-                <div class="card-body">
-                  <h5 class="card-title">2018/07/25 1:25 JST</h5>
-                  <p class="card-text">所有権を移行しました</p>
-                </div>
-              </div>
-              <br>
-          <div class="card">
-            <div class="card-body">
-              <h5 class="card-title">2018/03/10 22:49 JST</h5>
-              <p class="card-text">サイトのデザインを見直し見やすく修正しました。プライバシーポリシーを作成しました。</p>
-            </div>
-          </div>
-          <br>
-          <div class="card">
-            <div class="card-body">
-              <h5 class="card-title">2018/04/20 11:55 JST</h5>
-              <p class="card-text">サーバ名をサイトに反映させました。</p>
-            </div>
-          </div>
-        </div>
-      </div>
-      <br>
     </div>
 
       <div class="col col-lg-4">
