--- a/index.html
+++ b/index.html
@@ -77,6 +77,23 @@
         .custom-nav {
           background-color: #2979CE;
         }
+        
+        img {
+          border-radius: 5px;
+          display: block;
+          margin-left: auto;
+          margin-right: auto;
+          width: 90%;
+        }
+
+        .custom-a {
+          text-align: center;
+        }
+
+        .custom-a2 {
+          margin: 5px;
+          text-align: center;
+        }
 
       @media only screen and (max-width: 990px) {
         .custom-p {
@@ -171,7 +188,7 @@
 
       <div class="container">
           <div class="row">
-              <div class="col col-lg-8">
+              <div class="col-12">
 
       <div class="card border-danger text-black">
           <div class="card-body">
@@ -197,32 +214,34 @@
           </div>
         </div>
         <hr>
-
-      <div class="card text-black bg-success">
-        <div class="card-header text-white">Japan Minecraft Servers</div>
-          <div class="card-body" align="center">
-              <img class="img-fluid" src="https://minecraft.jp/servers/play.mcdr.ml/banner/1/560x95.png">
-              <br><br>
-              <a class="btn btn-light" href="https://minecraft.jp/servers/play.mcdr.ml/vote" role="button">サーバーへ投票する！</a>
-              </div>
-            </div>
-            <br>
     </div>
 
-      <div class="col col-lg-4">
-        <div class="card bg-primary">
-            <div class="card-header text-white">サーバーの様子...</div>
+      <div class="col-12 col-lg-8">
+        <div class="card border-warning">
         <div class="embed-responsive embed-responsive-16by9">
       <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/b1o9DRJmQZY"></iframe>
+    </div>
+  </div>
+  <br>
+
+<div class="card border-success">
+    <div class="card-header">Japan Minecraft Servers</div>
+      <div class="card-body custom-a">
+          <img class="img-fluid" src="https://minecraft.jp/servers/play.mcdr.ml/banner/1/560x95.png"><br>
+          <a class="btn btn-light " href="https://minecraft.jp/servers/play.mcdr.ml/vote" role="button">サーバーへ投票する！</a>
+          </div>
+        </div>
       </div>
-      </div>
-      <br>
-    <a class="twitter-timeline" href="https://twitter.com/mcdr_server?ref_src=twsrc%5Etfw" height="700px">Tweets by mcdr_server</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-    <br>
-    
-    </div>
-    </div>
-    </div>
+
+<div class="col-12 col-lg-4">
+     <div class="card border-primary">
+          <div class="card-body custom-a">
+     <a class="twitter-timeline" href="https://twitter.com/mcdr_server?ref_src=twsrc%5Etfw" height="680px">Tweets by mcdr_server</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+     </div>
+     </div>
+     </div>
+     </div>
+     </div>
 
      <footer class="footer">
         <hr>
