--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
           display: block;
           margin-left: auto;
           margin-right: auto;
-          width: 90%;
+          width: 100%;
         }
 
         .custom-a {
@@ -112,7 +112,7 @@
   </head>
   <body>
     <header>
-      <nav class="cs-margin navbar navbar-expand-lg navbar-light bg-light">
+      <nav class="cs-margin navbar navbar-expand-lg navbar-light bg-white">
           <div class="container">
         <a class="navbar-brand" href="#"><img src="img/nav-logo.png" style="width: 100px;" class="img-fluid" alt="Responsive image"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -146,9 +146,9 @@
               </nav>
     </header>
 
-    <div id="carousel" class="carousel slide" data-ride="carousel">
-    <div class="carousel-inner">
-  <div class="carousel-item active">
+  <div id="carousel" class="carousel slide" data-ride="carousel">
+   <div class="carousel-inner">
+    <div class="carousel-item active">
       <img class="d-block w-100" src="img/back1.jpg" alt="First slide">
         <div class="carousel-caption d-none d-md-block">
         </div>
@@ -180,10 +180,11 @@
    </div>
 
       <nav class="nav custom-nav justify-content-center">
-          <div class="container custom-center">
-        <a class="navbar-brand text-light custom-p">ようこそ、Minecraft Disney Resortへ。</a>
+        <div class="container custom-center">
+         <a class="navbar-brand text-light custom-p">ようこそ、Minecraft Disney Resortへ。</a>
         </div>
       </nav>
+
       <hr>
 
       <div class="container">
@@ -210,12 +211,16 @@
                 <h5 class="card-title custom-p2">2018/04/20 11:55 JST</h5>
                 <p class="card-text custom-p2">サーバ名をサイトに反映させました。</p>
               </div>
+             </div>
             </div>
+           </div>
           </div>
+         </div>
         </div>
-        <hr>
-    </div>
+    <hr>
 
+    <div class="container">
+        <div class="row">
       <div class="col-12 col-lg-8">
         <div class="card border-warning">
         <div class="embed-responsive embed-responsive-16by9">
@@ -225,23 +230,26 @@
   <br>
 
 <div class="card border-success">
-    <div class="card-header">Japan Minecraft Servers</div>
-      <div class="card-body custom-a">
-          <img class="img-fluid" src="https://minecraft.jp/servers/play.mcdr.ml/banner/1/560x95.png"><br>
-          <a class="btn btn-light " href="https://minecraft.jp/servers/play.mcdr.ml/vote" role="button">サーバーへ投票する！</a>
+    <div class="card-body">
+    <p>Japan Minecraft Servers</p>
+      <div class="custom-a">
+          <img class="img-fluid" src="https://minecraft.jp/servers/play.mcdr.ml/banner/5/560x95.png"><br>
+          <a class="btn btn-outline-success" href="https://minecraft.jp/servers/play.mcdr.ml/vote" role="button">サーバーへ投票する</a>
           </div>
         </div>
+      </div>
+      <br>
       </div>
 
 <div class="col-12 col-lg-4">
      <div class="card border-primary">
           <div class="card-body custom-a">
      <a class="twitter-timeline" href="https://twitter.com/mcdr_server?ref_src=twsrc%5Etfw" height="680px">Tweets by mcdr_server</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-     </div>
-     </div>
-     </div>
-     </div>
-     </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 
      <footer class="footer">
         <hr>
