--- a/index.html
+++ b/index.html
@@ -122,9 +122,9 @@
 
             <nav>
                 <div class="nav nav-tabs" id="nav-tab" role="tablist">
-                  <a class="nav-item nav-link active text-primary" id="nav-home-tab" data-toggle="tab" href="#nav-home" role="tab" aria-controls="nav-home" aria-selected="true"><i class="custom-faicon fas fa-home"></i><br>Home</a>
-                  <a class="nav-item nav-link custom-link1" id="nav-profile-tab" data-toggle="tab" href="#nav-profile" role="tab" aria-controls="nav-profile" aria-selected="false"><i  class="custom-faicon fas fa-newspaper"></i><br>ルールと規約</a>
-                  <a class="nav-item nav-link custom-link2" id="nav-contact-tab" data-toggle="tab" href="#nav-contact" role="tab" aria-controls="nav-contact" aria-selected="false"><i  class="custom-faicon far fa-building"></i><br>再現キャスト募集中</a>
+                  <a class="nav-item nav-link active text-primary" id="nav-home-tab" data-toggle="tab" href="#nav-home" role="tab" aria-controls="nav-home" aria-selected="true" href="https://mcdr.ml"><i class="custom-faicon fas fa-home"></i><br>Home</a>
+                  <a class="nav-item nav-link custom-link1" id="nav-profile-tab" data-toggle="tab" href="#nav-profile" role="tab" aria-controls="nav-profile" aria-selected="false"><i  class="custom-faicon fas fa-newspaper" href="rule.html"></i><br>ルールと規約</a>
+                  <a class="nav-item nav-link custom-link2" id="nav-contact-tab" data-toggle="tab" href="#nav-contact" role="tab" aria-controls="nav-contact" aria-selected="false"><i  class="custom-faicon far fa-building" href="https://docs.google.com/forms/d/e/1FAIpQLSfhcadNR5JJF9KNOXH2g9jwu3PBYfS_fge2lEqEFI9zkXP3Jg/viewform"></i><br>再現キャスト募集中</a>
 
                 <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle custom-link3" data-toggle="dropdown" href="#" id="download"><i class="custom-faicon fas fa-server"></i><br>連携サーバー<span class="caret"></span></a>
