--- a/index.html
+++ b/index.html
@@ -122,9 +122,9 @@
 
             <nav>
                 <div class="nav nav-tabs" id="nav-tab" role="tablist">
-                  <a class="nav-item nav-link active text-primary" data-toggle="tab" role="tab"  aria-selected="true" href="https://mcdr.ml"><i class="custom-faicon fas fa-home"></i><br>Home</a>
-                  <a class="nav-item nav-link custom-link1"  data-toggle="tab" role="tab" aria-selected="false" href="rule.html"><i class="custom-faicon fas fa-newspaper"></i><br>ルールと規約</a>
-                  <a class="nav-item nav-link custom-link2" data-toggle="tab"  role="tab" aria-selected="false" href="https://docs.google.com/forms/d/e/1FAIpQLSfhcadNR5JJF9KNOXH2g9jwu3PBYfS_fge2lEqEFI9zkXP3Jg/viewform"><i class="custom-faicon far fa-building"></i><br>再現キャスト募集中</a>
+                  <a class="nav-item nav-link active text-primary" href="https://mcdr.ml"><i class="custom-faicon fas fa-home"></i><br>Home</a>
+                  <a class="nav-item nav-link custom-link1" href="rule.html"><i class="custom-faicon fas fa-newspaper"></i><br>ルールと規約</a>
+                  <a class="nav-item nav-link custom-link2" href="https://docs.google.com/forms/d/e/1FAIpQLSfhcadNR5JJF9KNOXH2g9jwu3PBYfS_fge2lEqEFI9zkXP3Jg/viewform"><i class="custom-faicon far fa-building"></i><br>再現キャスト募集中</a>
 
                 <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle custom-link3" data-toggle="dropdown" href="#" id="download"><i class="custom-faicon fas fa-server"></i><br>連携サーバー<span class="caret"></span></a>
