--- a/index.html
+++ b/index.html
@@ -1,263 +1,165 @@
 <!DOCTYPE html>
 <html lang="jp">
-  <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="keywords" content="spigot,bungeecode,server,minecraft,mincraftjp,MCDRServer,mcdr,">
-    <meta name="author" content="www.mcdr.ml">
-    <link rel="icon" sizes="256x256" href="logo.png">
-    <title>MCDRServer - home</title>
-    <link rel="stylesheet" href="bootstrap.min.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/earlyaccess/sawarabigothic.css" />
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
+<head>
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<meta name="keywords" content="spigot,bungeecode,server,minecraft,mincraftjp,MCDRServer,mcdr,">
+	<meta name="author" content="www.mcdr.ml">
+	<link rel="icon" sizes="256x256" href="logo.png">
+	<title>MCDRServer - home</title>
+	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/earlyaccess/sawarabigothic.css" />
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
+</head>
+<body>
+	<header>
+		<nav class="cs-margin navbar navbar-expand-lg navbar-light bg-white">
+			<div class="container">
+				<a class="navbar-brand" href="#"><img src="img/nav-logo.png" style="width: 100px;" class="img-fluid" alt="Responsive image"></a>
+				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
+				</button>
+				<div class="collapse navbar-collapse" id="navbarNav">
 
-    <style>
-        body {
-          font-family: "Sawarabi Gothic";
-          margin: 0;
-        }
+					<nav>
+						<div class="nav nav-tabs" id="nav-tab" role="tablist">
+							<a class="nav-item nav-link active text-primary" href="https://mcdr.ml"><i class="custom-faicon fas fa-home"></i><br>Home</a>
+							<a class="nav-item nav-link custom-link1" href="rule.html"><i class="custom-faicon fas fa-newspaper"></i><br>ルールと規約</a>
+							<a class="nav-item nav-link custom-link2" href="https://docs.google.com/forms/d/e/1FAIpQLSfhcadNR5JJF9KNOXH2g9jwu3PBYfS_fge2lEqEFI9zkXP3Jg/viewform"><i class="custom-faicon far fa-building"></i><br>再現キャスト募集中</a>
 
-        .cs-margin {
-          text-align: center;
-        }
+							<li class="nav-item dropdown">
+								<a class="nav-link dropdown-toggle custom-link3" data-toggle="dropdown" href="#" id="download"><i class="custom-faicon fas fa-server"></i><br>連携サーバー<span class="caret"></span></a>
+								<div class="dropdown-menu" aria-labelledby="dropdown">
+									<a class="dropdown-item" href="http://disneyserver.wixsite.com/disneycrafthp">DisneyCraft様 </a>
+									<a class="dropdown-item" href="https://www.crazynet.ml/">CrazyNET</a>
+								</div>
+							</li>
 
-        .custom-center {
-          text-align: center;
-          margin: 8px;
-        }
-        .custom-p {
-          font-size: 25px;
-          font-family: "Sawarabi Gothic";
-        }
-        .custom-p2 {
-          color: #2979CE;
-          font-family: "Sawarabi Gothic";
-        }
-        .custom-faicon {
-          font-size: 30px;
-        }
-        hr {
-	        text-align: center;
-          background-color: #2979CE;
-          border: 0px;
-          height: 1px;
-          margin-top: 25px;
-          margin-bottom: 25px; 
-        }
-        hr:after {
-	        content: "\002605";
-         	display: inline-block;
-        	position: relative;
-         	top: -17px;
-          left: 38%;
-         	padding: 0 20px;
-        	color: #2979CE;
-         	font-size: 20px;
-          /* -webkit-transform: rotate(1050deg);
-	        -moz-transform: rotate(105deg);
-         	transform: rotate(105deg); */
-        }
+							<li class="nav-item dropdown">
+								<a class="nav-link dropdown-toggle custom-link4" data-toggle="dropdown" href="#" id="download"><i class="custom-faicon fas fa-link"></i><br>リンク<span class="caret"></span></a>
+								<div class="dropdown-menu" aria-labelledby="dropdown">
+									<a class="dropdown-item" href="https://twitter.com/mcdr_server">Twitter</a>
+									<a class="dropdown-item" href="https://www.youtube.com/channel/UC0ra2JkCdxFTdMScNtwJG9w">Youtube</a>
+									<a class="dropdown-item" href="https://discordapp.com/invite/tMcFPcX">Discord</a>
+								</li>
+							</div>
+						</div>
+					</nav>
+				</header>
 
-        .custom-link1 {
-          color: #96E02A;
-        }
+				<div id="carousel" class="carousel slide" data-ride="carousel">
+					<div class="carousel-inner">
+						<div class="carousel-item active">
+							<img class="d-block w-100" src="img/back1.jpg" alt="First slide">
+							<div class="carousel-caption d-none d-md-block">
+							</div>
+						</div>
+						<div class="carousel-item">
+							<img class="d-block w-100" src="img/back2.jpg" alt="Third slide">
+							<div class="carousel-caption d-none d-md-block">
+							</div>
+						</div>
+						<div class="carousel-item">
+							<img class="d-block w-100" src="img/back3.jpg" alt="Third slide">
+							<div class="carousel-caption d-none d-md-block">
+							</div>
+						</div>
+						<div class="carousel-item">
+							<img class="d-block w-100" src="img/back4.jpg" alt="Third slide">
+							<div class="carousel-caption d-none d-md-block">
+							</div>
+						</div>
+					</div>
+					<a class="carousel-control-prev" href="#carousel" role="button" data-slide="prev">
+						<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+						<span class="sr-only">Previous</span>
+					</a>
+					<a class="carousel-control-next" href="#carousel" role="button" data-slide="next">
+						<span class="carousel-control-next-icon" aria-hidden="true"></span>
+						<span class="sr-only">Next</span>
+					</a>
+				</div>
 
-        .custom-link2 {
-          color: #FE9825;
-        }
+				<nav class="nav custom-nav justify-content-center">
+					<div class="container custom-center">
+						<a class="navbar-brand text-light custom-p">ようこそ、Minecraft Disney Resortへ。</a>
+					</div>
+				</nav>
 
-        .custom-link3 {
-          color: #33BCAB;
-        }
+				<hr>
 
-        .custom-link4 {
-          color: #9831FF;
-        }
+				<div class="container">
+					<div class="row">
+						<div class="col-12">
 
-        .custom-nav {
-          background-color: #2979CE;
-        }
-        
-        .cs-img {
-          border-radius: 5px;
-          display: block;
-          margin-left: auto;
-          margin-right: auto;
-          width: 100%;
-        }
+							<div class="card border-danger text-black">
+								<div class="card-body">
+									<h3 class="font-weight-bold">お知らせ</h3>
+									<div class="card border-white">
+										<div class="card-body">
+											<h5 class="card-title custom-p2">2018/07/25 1:25 JST</h5>
+											<p class="card-text custom-p2">所有権を移行しました</p>
+										</div>
+									</div>
+									<div class="card border-white">
+										<div class="card-body">
+											<h5 class="card-title custom-p2">2018/03/10 22:49 JST</h5>
+											<p class="card-text custom-p2">サイトのデザインを見直し見やすく修正しました。プライバシーポリシーを作成しました。</p>
+										</div>
+									</div>
+									<div class="card border-white">
+										<div class="card-body">
+											<h5 class="card-title custom-p2">2018/04/20 11:55 JST</h5>
+											<p class="card-text custom-p2">サーバ名をサイトに反映させました。</p>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<hr>
 
-        .custom-a {
-          text-align: center;
-        }
+				<div class="container">
+					<div class="row">
+						<div class="col-12 col-lg-8">
+							<div class="card border-warning">
+								<div class="embed-responsive embed-responsive-16by9">
+									<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/b1o9DRJmQZY"></iframe>
+								</div>
+							</div>
+							<br>
 
-        .custom-a2 {
-          margin: 5px;
-          text-align: center;
-        }
+							<div class="card border-success">
+								<div class="card-body">
+									<p>Japan Minecraft Servers</p>
+									<div class="custom-a">
+										<img class="img-fluid cs-img" src="https://minecraft.jp/servers/play.mcdr.ml/banner/5/560x95.png"><br>
+										<a class="btn btn-outline-success" href="https://minecraft.jp/servers/play.mcdr.ml/vote" role="button">サーバーへ投票する</a>
+									</div>
+								</div>
+							</div>
+							<br>
+						</div>
 
-      @media only screen and (max-width: 990px) {
-        .custom-p {
-          font-size: 13px;
-          font-family: "Sawarabi Gothic";
-        }
-        .custom-faicon {
-          font-size: 20px;
-        }
-        .custom-center {
-          text-align: center;
-          margin: 0px;
-        }
-      }
-      </style>
-  </head>
-  <body>
-    <header>
-      <nav class="cs-margin navbar navbar-expand-lg navbar-light bg-white">
-          <div class="container">
-        <a class="navbar-brand" href="#"><img src="img/nav-logo.png" style="width: 100px;" class="img-fluid" alt="Responsive image"></a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
+						<div class="col-12 col-lg-4">
+							<div class="card border-primary">
+								<div class="card-body custom-a">
+									<a class="twitter-timeline" href="https://twitter.com/mcdr_server?ref_src=twsrc%5Etfw" height="680px">Tweets by mcdr_server</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
 
-            <nav>
-                <div class="nav nav-tabs" id="nav-tab" role="tablist">
-                  <a class="nav-item nav-link active text-primary" href="https://mcdr.ml"><i class="custom-faicon fas fa-home"></i><br>Home</a>
-                  <a class="nav-item nav-link custom-link1" href="rule.html"><i class="custom-faicon fas fa-newspaper"></i><br>ルールと規約</a>
-                  <a class="nav-item nav-link custom-link2" href="https://docs.google.com/forms/d/e/1FAIpQLSfhcadNR5JJF9KNOXH2g9jwu3PBYfS_fge2lEqEFI9zkXP3Jg/viewform"><i class="custom-faicon far fa-building"></i><br>再現キャスト募集中</a>
+				<footer class="footer">
+					<hr>
+					<div class="container">
+						<p>&copy 2017-2018 MCDR Server | <a href="rule.html">利用規約とプライバシーポリシー</a><br>Minecraft copyrights depend on <a href="https://mojang.com/">Mojang AB</a>, and we are not affiliated with <a href="https://mojang.com/">Mojang AB.</a></p>
+						'
+						<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+						<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
+						<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
 
-                <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle custom-link3" data-toggle="dropdown" href="#" id="download"><i class="custom-faicon fas fa-server"></i><br>連携サーバー<span class="caret"></span></a>
-                  <div class="dropdown-menu" aria-labelledby="dropdown">
-                  <a class="dropdown-item" href="http://disneyserver.wixsite.com/disneycrafthp">DisneyCraft様 </a>
-                  <a class="dropdown-item" href="https://www.crazynet.ml/">CrazyNET</a>
-                  </div>
-                </li>
-
-                <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle custom-link4" data-toggle="dropdown" href="#" id="download"><i class="custom-faicon fas fa-link"></i><br>リンク<span class="caret"></span></a>
-                  <div class="dropdown-menu" aria-labelledby="dropdown">
-                  <a class="dropdown-item" href="https://twitter.com/mcdr_server">Twitter</a>
-                  <a class="dropdown-item" href="https://www.youtube.com/channel/UC0ra2JkCdxFTdMScNtwJG9w">Youtube</a>
-                  <a class="dropdown-item" href="https://discordapp.com/invite/tMcFPcX">Discord</a>
-                </li>
-                </div>
-               </div>
-              </nav>
-    </header>
-
-  <div id="carousel" class="carousel slide" data-ride="carousel">
-   <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img class="d-block w-100" src="img/back1.jpg" alt="First slide">
-        <div class="carousel-caption d-none d-md-block">
-        </div>
-      </div>
-    <div class="carousel-item">
-      <img class="d-block w-100" src="img/back2.jpg" alt="Third slide">
-        <div class="carousel-caption d-none d-md-block">
-        </div>
-      </div>
-    <div class="carousel-item">
-      <img class="d-block w-100" src="img/back3.jpg" alt="Third slide">
-        <div class="carousel-caption d-none d-md-block">
-        </div>
-      </div>
-    <div class="carousel-item">
-      <img class="d-block w-100" src="img/back4.jpg" alt="Third slide">
-        <div class="carousel-caption d-none d-md-block">
-        </div>
-      </div>
-      </div>
-     <a class="carousel-control-prev" href="#carousel" role="button" data-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-       <span class="sr-only">Previous</span>
-        </a>
-     <a class="carousel-control-next" href="#carousel" role="button" data-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-       <span class="sr-only">Next</span>
-    </a>
-   </div>
-
-      <nav class="nav custom-nav justify-content-center">
-        <div class="container custom-center">
-         <a class="navbar-brand text-light custom-p">ようこそ、Minecraft Disney Resortへ。</a>
-        </div>
-      </nav>
-
-      <hr>
-
-      <div class="container">
-          <div class="row">
-              <div class="col-12">
-
-      <div class="card border-danger text-black">
-          <div class="card-body">
-              <h3 class="font-weight-bold">お知らせ</h3>
-              <div class="card border-white">
-                  <div class="card-body">
-                    <h5 class="card-title custom-p2">2018/07/25 1:25 JST</h5>
-                    <p class="card-text custom-p2">所有権を移行しました</p>
-                  </div>
-                </div>
-            <div class="card border-white">
-              <div class="card-body">
-                <h5 class="card-title custom-p2">2018/03/10 22:49 JST</h5>
-                <p class="card-text custom-p2">サイトのデザインを見直し見やすく修正しました。プライバシーポリシーを作成しました。</p>
-              </div>
-            </div>
-            <div class="card border-white">
-              <div class="card-body">
-                <h5 class="card-title custom-p2">2018/04/20 11:55 JST</h5>
-                <p class="card-text custom-p2">サーバ名をサイトに反映させました。</p>
-              </div>
-             </div>
-            </div>
-           </div>
-          </div>
-         </div>
-        </div>
-    <hr>
-
-    <div class="container">
-        <div class="row">
-      <div class="col-12 col-lg-8">
-        <div class="card border-warning">
-        <div class="embed-responsive embed-responsive-16by9">
-      <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/b1o9DRJmQZY"></iframe>
-    </div>
-  </div>
-  <br>
-
-<div class="card border-success">
-    <div class="card-body">
-    <p>Japan Minecraft Servers</p>
-      <div class="custom-a">
-          <img class="img-fluid cs-img" src="https://minecraft.jp/servers/play.mcdr.ml/banner/5/560x95.png"><br>
-          <a class="btn btn-outline-success" href="https://minecraft.jp/servers/play.mcdr.ml/vote" role="button">サーバーへ投票する</a>
-          </div>
-        </div>
-      </div>
-      <br>
-      </div>
-
-<div class="col-12 col-lg-4">
-     <div class="card border-primary">
-          <div class="card-body custom-a">
-     <a class="twitter-timeline" href="https://twitter.com/mcdr_server?ref_src=twsrc%5Etfw" height="680px">Tweets by mcdr_server</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-
-     <footer class="footer">
-        <hr>
-        <div class="container">
-        <p>&copy 2017-2018 MCDR Server | <a href="rule.html">利用規約とプライバシーポリシー</a><br>Minecraft copyrights depend on <a href="https://mojang.com/">Mojang AB</a>, and we are not affiliated with <a href="https://mojang.com/">Mojang AB.</a></p>
-
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
-    <script src="popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-
-</body></html>
+					</body></html>
