--- a/tutorial.html
+++ b/tutorial.html
@@ -1,51 +1,54 @@
 <!DOCTYPE html>
 <html lang="jp">
-  <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="keywords" content="spigot,bungeecode,server,minecraft,mincraftjp,mcdr,">
-    <meta name="author" content="www.mcdr.ml">
-    <link rel="icon" sizes="256x256" href="logo.png">
-    <title>MCDR Server - tutorial</title>
-    <link rel="stylesheet" href="bootstrap.min.css">
-    
-<body>
-   <header>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="keywords" content="spigot,bungeecode,server,minecraft,mincraftjp,mcdr,">
+  <meta name="author" content="www.mcdr.ml">
+  <link rel="icon" sizes="256x256" href="logo.png">
+  <title>MCDR Server - tutorial</title>
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/earlyaccess/sawarabigothic.css" />
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
+
+  <body>
+    <header>
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
-      <a class="navbar-brand" href="#">MCDRServer</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link" href="index.html">戻る</a>
-          </li>
-     </div>
-    </nav>
-  </header>
+          <a class="navbar-brand" href="#">MCDRServer</a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link" href="index.html">戻る</a>
+              </li>
+            </div>
+          </nav>
+        </header>
 
-  <br>
-  <div class="container">
-  <div class="card bg-white">
-    <div class="card-header">サーバへの参加が初めてな方はこちらから順にご覧ください。</div>
-    <div class="card-body">
-        <img src="img/tutorial1.png" class="img-fluid"><br><br>
-        <img src="img/tutorial2.png" class="img-fluid"><br><br>
-        <img src="img/tutorial3.png" class="img-fluid"><br><br>
-        <img src="img/tutorial4.png" class="img-fluid"><br><br>
-       </div>
-        </div>
+        <br>
+        <div class="container">
+          <div class="card bg-white">
+            <div class="card-header">サーバへの参加が初めてな方はこちらから順にご覧ください。</div>
+            <div class="card-body">
+              <img src="img/tutorial1.png" class="img-fluid"><br><br>
+              <img src="img/tutorial2.png" class="img-fluid"><br><br>
+              <img src="img/tutorial3.png" class="img-fluid"><br><br>
+              <img src="img/tutorial4.png" class="img-fluid"><br><br>
+            </div>
+          </div>
 
-                 <footer class="footer">
-                    <hr>
-                    <div class="container">
-                    <p>&copy 2017-2018 MCDRServer | <a href="rule.html">利用規約とプライバシーポリシー</a><br>Minecraft copyrights depend on <a href="https://mojang.com/">Mojang AB</a>, and we are not affiliated with <a href="https://mojang.com/">Mojang AB.</a></p>            
+          <footer class="footer">
+            <hr>
+            <div class="container">
+              <p>&copy 2017-2018 MCDRServer | <a href="rule.html">利用規約とプライバシーポリシー</a><br>Minecraft copyrights depend on <a href="https://mojang.com/">Mojang AB</a>, and we are not affiliated with <a href="https://mojang.com/">Mojang AB.</a></p>            
 
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
-  <script src="popper.min.js"></script>
-  <script src="bootstrap.min.js"></script>
+              <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+              <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
+              <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
 
-  </body>
-</html>
+            </body>
+            </html>
